added comments for two first block

--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
   <body>
+    <!-- Блок хэдер -->
     <header class="header">
       <div class="header__top">
         <div class="container">
@@ -94,6 +95,10 @@
         </div>
       </div>
     </header>
+<!-- Конец блока хэдер -->
+
+
+    <!-- Секция поиск -->
     <section class="search" style="background-image: url(images/search-bg.jpg);">
       <div class="container">
         <div class="search__inner">
@@ -114,6 +119,7 @@
         </div>
       </div>
     </section>
+<!-- Конец секции поиск -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
