--- a/app/index.html
+++ b/app/index.html
@@ -1,128 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/libs.min.css" />
-    <link rel="stylesheet" href="css/style.min.css" />
-  </head>
-  <body>
-    <!-- Блок хэдер -->
-    <header class="header">
-      <div class="header__top">
-        <div class="container">
-          <div class="header__top-inner">
-            <div class="header__logo">
-              <a href="#"></a>
-              <img src="images/logo.png" alt="" />
-            </div>
-            <div class="header__text">
-              <a href="#">
-                <span>Need help?</span>
-              </a>
-              Talk to an expert:
-              <a class="header__phone" href="tel:+61383766284"
-                >+61 3 8376 6284</a
-              >
-            </div>
-            <div class="header__box">
-              <a class="basket" href="#"></a>
-              <a class="header__btn header__btn-login" href="#">Login</a>
-              <a class="header__btn header__btn-register" href="#">Register</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="headr__menu">
-        <div class="container">
-          <nav class="menu">
-            <ul class="menu__list">
-              <li>
-                <a href="#">
-                  Home
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  About
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  WordPress
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  Joomla
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  PSD
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  Plugins
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  Components
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  Pages
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  Contact
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  Help
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </header>
-<!-- Конец блока хэдер -->
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/libs.min.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
+</head>
 
-    <!-- Секция поиск -->
-    <section class="search" style="background-image: url(images/search-bg.jpg);">
+<body>
+  <!-- Блок хэдер -->
+  <header class="header">
+    <div class="header__top">
       <div class="container">
-        <div class="search__inner">
-          <div class="search__inner-title">
-              Welcome To Foxtar Market Place!
+        <div class="header__top-inner">
+          <div class="header__logo">
+            <a href="#"></a>
+            <img src="images/logo.png" alt="" />
           </div>
-          <div class="search__inner-text">
-              Premium WordPress Themes, Web Templates and Many More ...
+          <div class="header__text">
+            <a href="#">
+              <span>Need help?</span>
+            </a>
+            Talk to an expert:
+            <a class="header__phone" href="tel:+61383766284">+61 3 8376 6284</a>
           </div>
-          <div class="search__inner-form">
-            <form>
-              <input type="text" placeholder="Search Your Keywords . . ." required>
-              <button type="submit">
-                <img src="images/icons/search.svg" alt="">
-              </button>
-            </form>
+          <div class="header__box">
+            <a class="basket" href="#"></a>
+            <a class="header__btn header__btn-login" href="#">Login</a>
+            <a class="header__btn header__btn-register" href="#">Register</a>
           </div>
         </div>
       </div>
-    </section>
-<!-- Конец секции поиск -->
+    </div>
+    <div class="header__menu">
+      <div class="container">
+        <nav class="menu">
+          <ul class="menu__list">
+            <li>
+              <a href="#">
+                Home
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                About
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                WordPress
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Joomla
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                PSD
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Plugins
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Components
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Pages
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Contact
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Help
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <!-- Конец блока хэдер -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
-  </body>
+
+  <!-- Секция поиск -->
+  <section class="search" style="background-image: url(images/search-bg.jpg);">
+    <div class="container">
+      <div class="search__inner">
+        <div class="search__inner-title">
+          Welcome To Foxtar Market Place!
+        </div>
+        <div class="search__inner-text">
+          Premium WordPress Themes, Web Templates and Many More ...
+        </div>
+        <div class="search__inner-form">
+          <form>
+            <input type="text" placeholder="Search Your Keywords . . ." required>
+            <button type="submit">
+              <img src="images/icons/search.svg" alt="">
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- Конец секции поиск -->
+
+  <!-- Секция продукты -->
+  <section class="products">
+    <div class="container-fluid">
+      <div class="products__title title">
+         Let's Check Out Our Newest Release Products
+      </div>
+      <div class="products__inner">
+        <div class="products__inner-btn">
+          <button>All</button>
+          <button>WordPress</button>
+          <button>Joomla</button>
+          <button>Plagins</button>
+          <button>Components</button>
+          <button>PSD</button>
+        </div>
+        <div class="products__inner-box">
+          <div class="products__item">
+            <a class="products__item-img" href="#" style="background-image: url(images/content/1.jpg);"></a>
+            <div class="products__item-content">
+              <div class="products__item-name">
+                <a class="products__item-title" href="#">
+                  Responsive Mobile APP
+                </a>
+                <a class="products__item-category" href="#">
+                  Site Template
+                </a>
+              </div>
+              <div class="products__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <div class="product__item-author">
+                <span style=""></span>
+                Radiustheme
+              </div>
+              <div class="product__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/libs.min.js"></script>
+  <script src="js/main.min.js"></script>
+</body>
+
 </html>
