--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div class="headr__menu">
+      <div class="header__menu">
         <div class="container">
           <nav class="menu">
             <ul class="menu__list">
@@ -120,6 +120,289 @@
       </div>
     </section>
 <!-- Конец секции поиск -->
+
+<!-- Секция новая продукция -->
+    <section class="gallery">
+      <div class="gallery__inner">
+      <div class="container">
+        <div class="gallery__title">
+          Let’s Check Out Our Newest Release Prodcuts
+        </div>
+        <div class="menu__gallery">
+        <nav class="gallery__menu">
+            <ul class="gallery__menu-list">
+                <li>
+                  <a class="active" href="#" >All</a>
+                </li>
+                <li>
+                  <a href="#">WordPress</a>
+                </li>
+                <li>
+                  <a href="#">Joomla</a>
+                </li>
+                <li>
+                  <a href="#">Plugins</a>
+                </li>
+                <li>
+                  <a href="#">Component</a>
+                </li>
+                <li>
+                  <a href="#">PSD</a>
+                </li>
+              </ul>
+        </nav>
+        </div>
+      </div>
+      </div>
+        <div class="gallery__dashboard">
+          <div class="gallery__items">
+            <div class="gallery__item">
+              <img src="images/products/1.jpg" alt="">
+            <div class="info"></div>
+              <div class="gallery__item-product">
+                <div class="gallery__item-title">
+                  <a href="#">Responsive Mobile APP</a>
+                </div>
+                <div class="gallery__item-description">
+                  <a href="#">Site Template</a>
+                </div>
+                <div class="gallery__item-price"><span>$19</span></div>
+            </div>
+              <div class="gallery__item-about">
+                <div class="gallery__item-author">
+                  <a href="#"><img src="images/products_author/men.svg" alt=""><span>Radiustheme</span></a>
+                </div>
+                  <div class="gallery__item-rating">
+                    <ul>
+                      <li><span class="star1" title="Рейтинг плохо"></span></li>
+                      <li><span class="star2" title="Рейтинг удовлетворительно"></span></li>
+                      <li><span class="star3" title="Рейтинг среднее"></span></li>
+                      <li><span class="star4" title="Рейтинг хорошо"></span></li>
+                      <li><span class="star5" title="Рейтинг отлично"></span></li>
+                    </ul>
+                </div>
+                  <div class="gallery__item-load">
+                    <span>(05)</span>
+                </div>
+            </div>
+            </div>
+          </div>
+          <div class="gallery__items">
+              <div class="gallery__item">
+                <img src="images/products/1.jpg" alt="">
+                <div class="gallery__item-product">
+                  <div class="gallery__item-title">
+                    <a href="#">Responsive Mobile APP</a>
+                  </div>
+                  <div class="gallery__item-description">
+                    <a href="#">Site Template</a>
+                  </div>
+                  <div class="gallery__item-price"><span>$19</span></div>
+              </div>
+                <div class="gallery__item-about">
+                  <div class="gallery__item-author">
+                    <a href="#"><img src="images/products_author/men.svg" alt=""><span>Radiustheme</span></a>
+                  </div>
+                    <div class="gallery__item-rating">
+                      <ul>
+                        <li><span class="star1" title="Рейтинг плохо"></span></li>
+                        <li><span class="star2" title="Рейтинг удовлетворительно"></span></li>
+                        <li><span class="star3" title="Рейтинг среднее"></span></li>
+                        <li><span class="star4" title="Рейтинг хорошо"></span></li>
+                        <li><span class="star5" title="Рейтинг отлично"></span></li>
+                      </ul>
+                  </div>
+                    <div class="gallery__item-load">
+                      <span>(05)</span>
+                  </div>
+              </div>
+              </div>
+            </div>
+            <div class="gallery__items">
+                <div class="gallery__item">
+                  <img src="images/products/1.jpg" alt="">
+                  <div class="gallery__item-product">
+                    <div class="gallery__item-title">
+                      <a href="#">Responsive Mobile APP</a>
+                    </div>
+                    <div class="gallery__item-description">
+                      <a href="#">Site Template</a>
+                    </div>
+                    <div class="gallery__item-price"><span>$19</span></div>
+                </div>
+                  <div class="gallery__item-about">
+                    <div class="gallery__item-author">
+                      <a href="#"><img src="images/products_author/men.svg" alt=""><span>Radiustheme</span></a>
+                    </div>
+                      <div class="gallery__item-rating">
+                        <ul>
+                          <li><span class="star1" title="Рейтинг плохо"></span></li>
+                          <li><span class="star2" title="Рейтинг удовлетворительно"></span></li>
+                          <li><span class="star3" title="Рейтинг среднее"></span></li>
+                          <li><span class="star4" title="Рейтинг хорошо"></span></li>
+                          <li><span class="star5" title="Рейтинг отлично"></span></li>
+                        </ul>
+                    </div>
+                      <div class="gallery__item-load">
+                        <span>(05)</span>
+                    </div>
+                </div>
+                </div>
+              </div><div class="gallery__items">
+                  <div class="gallery__item">
+                    <img src="images/products/1.jpg" alt="">
+                    <div class="gallery__item-product">
+                      <div class="gallery__item-title">
+                        <a href="#">Responsive Mobile APP</a>
+                      </div>
+                      <div class="gallery__item-description">
+                        <a href="#">Site Template</a>
+                      </div>
+                      <div class="gallery__item-price"><span>$19</span></div>
+                  </div>
+                    <div class="gallery__item-about">
+                      <div class="gallery__item-author">
+                        <a href="#"><img src="images/products_author/men.svg" alt=""><span>Radiustheme</span></a>
+                      </div>
+                        <div class="gallery__item-rating">
+                          <ul>
+                            <li><span class="star1" title="Рейтинг плохо"></span></li>
+                            <li><span class="star2" title="Рейтинг удовлетворительно"></span></li>
+                            <li><span class="star3" title="Рейтинг среднее"></span></li>
+                            <li><span class="star4" title="Рейтинг хорошо"></span></li>
+                            <li><span class="star5" title="Рейтинг отлично"></span></li>
+                          </ul>
+                      </div>
+                        <div class="gallery__item-load">
+                          <span>(05)</span>
+                      </div>
+                  </div>
+                  </div>
+                </div><div class="gallery__items">
+                    <div class="gallery__item">
+                      <img src="images/products/1.jpg" alt="">
+                      <div class="gallery__item-product">
+                        <div class="gallery__item-title">
+                          <a href="#">Responsive Mobile APP</a>
+                        </div>
+                        <div class="gallery__item-description">
+                          <a href="#">Site Template</a>
+                        </div>
+                        <div class="gallery__item-price"><span>$19</span></div>
+                    </div>
+                      <div class="gallery__item-about">
+                        <div class="gallery__item-author">
+                          <a href="#"><img src="images/products_author/men.svg" alt=""><span>Radiustheme</span></a>
+                        </div>
+                          <div class="gallery__item-rating">
+                            <ul>
+                              <li><span class="star1" title="Рейтинг плохо"></span></li>
+                              <li><span class="star2" title="Рейтинг удовлетворительно"></span></li>
+                              <li><span class="star3" title="Рейтинг среднее"></span></li>
+                              <li><span class="star4" title="Рейтинг хорошо"></span></li>
+                              <li><span class="star5" title="Рейтинг отлично"></span></li>
+                            </ul>
+                        </div>
+                          <div class="gallery__item-load">
+                            <span>(05)</span>
+                        </div>
+                    </div>
+                    </div>
+                  </div><div class="gallery__items">
+                      <div class="gallery__item">
+                        <img src="images/products/1.jpg" alt="">
+                        <div class="gallery__item-product">
+                          <div class="gallery__item-title">
+                            <a href="#">Responsive Mobile APP</a>
+                          </div>
+                          <div class="gallery__item-description">
+                            <a href="#">Site Template</a>
+                          </div>
+                          <div class="gallery__item-price"><span>$19</span></div>
+                      </div>
+                        <div class="gallery__item-about">
+                          <div class="gallery__item-author">
+                            <a href="#"><img src="images/products_author/men.svg" alt=""><span>Radiustheme</span></a>
+                          </div>
+                            <div class="gallery__item-rating">
+                              <ul>
+                                <li><span class="star1" title="Рейтинг плохо"></span></li>
+                                <li><span class="star2" title="Рейтинг удовлетворительно"></span></li>
+                                <li><span class="star3" title="Рейтинг среднее"></span></li>
+                                <li><span class="star4" title="Рейтинг хорошо"></span></li>
+                                <li><span class="star5" title="Рейтинг отлично"></span></li>
+                              </ul>
+                          </div>
+                            <div class="gallery__item-load">
+                              <span>(05)</span>
+                          </div>
+                      </div>
+                      </div>
+                    </div><div class="gallery__items">
+                        <div class="gallery__item">
+                          <img src="images/products/1.jpg" alt="">
+                          <div class="gallery__item-product">
+                            <div class="gallery__item-title">
+                              <a href="#">Responsive Mobile APP</a>
+                            </div>
+                            <div class="gallery__item-description">
+                              <a href="#">Site Template</a>
+                            </div>
+                            <div class="gallery__item-price"><span>$19</span></div>
+                        </div>
+                          <div class="gallery__item-about">
+                            <div class="gallery__item-author">
+                              <a href="#"><img src="images/products_author/men.svg" alt=""><span>Radiustheme</span></a>
+                            </div>
+                              <div class="gallery__item-rating">
+                                <ul>
+                                  <li><span class="star1" title="Рейтинг плохо"></span></li>
+                                  <li><span class="star2" title="Рейтинг удовлетворительно"></span></li>
+                                  <li><span class="star3" title="Рейтинг среднее"></span></li>
+                                  <li><span class="star4" title="Рейтинг хорошо"></span></li>
+                                  <li><span class="star5" title="Рейтинг отлично"></span></li>
+                                </ul>
+                            </div>
+                              <div class="gallery__item-load">
+                                <span>(05)</span>
+                            </div>
+                        </div>
+                        </div>
+                      </div><div class="gallery__items">
+                          <div class="gallery__item">
+                            <img src="images/products/1.jpg" alt="">
+                            <div class="gallery__item-product">
+                              <div class="gallery__item-title">
+                                <a href="#">Responsive Mobile APP</a>
+                              </div>
+                              <div class="gallery__item-description">
+                                <a href="#">Site Template</a>
+                              </div>
+                              <div class="gallery__item-price"><span>$19</span></div>
+                          </div>
+                            <div class="gallery__item-about">
+                              <div class="gallery__item-author">
+                                <a href="#"><img src="images/products_author/men.svg" alt=""><span>Radiustheme</span></a>
+                              </div>
+                                <div class="gallery__item-rating">
+                                  <ul>
+                                    <li><span class="star1" title="Рейтинг плохо"></span></li>
+                                    <li><span class="star2" title="Рейтинг удовлетворительно"></span></li>
+                                    <li><span class="star3" title="Рейтинг среднее"></span></li>
+                                    <li><span class="star4" title="Рейтинг хорошо"></span></li>
+                                    <li><span class="star5" title="Рейтинг отлично"></span></li>
+                                  </ul>
+                              </div>
+                                <div class="gallery__item-load">
+                                  <span>(05)</span>
+                              </div>
+                          </div>
+                          </div>
+                        </div>
+        </div>
+        
+      </div>
+    </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
