--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <!-- Блок хэдер -->
+  <!-- start header -->
   <header class="header">
     <div class="header__top">
       <div class="container">
@@ -95,10 +95,10 @@
       </div>
     </div>
   </header>
-  <!-- Конец блока хэдер -->
+  <!-- end header -->
 
 
-  <!-- Секция поиск -->
+  <!-- start search -->
   <section class="search" style="background-image: url(images/search-bg.jpg);">
     <div class="container">
       <div class="search__inner">
@@ -119,9 +119,9 @@
       </div>
     </div>
   </section>
-  <!-- Конец секции поиск -->
+  <!--end search-->
 
-  <!-- Секция продукты -->
+  <!-- start products -->
   <section class="products">
     <div class="container-fluid">
       <div class="products__title title">
@@ -129,34 +129,209 @@
       </div>
       <div class="products__inner">
         <div class="products__inner-btn">
-          <button>All</button>
-          <button>WordPress</button>
-          <button>Joomla</button>
-          <button>Plagins</button>
-          <button>Components</button>
-          <button>PSD</button>
+          <button type="button" data-filter="all">All</button>
+          <button type="button" data-filter=".category-wordpress">WordPress</button>
+          <button type="button" data-filter=".category-joomla">Joomla</button>
+          <button type="button" data-filter=".category-plugins">Plugins</button>
+          <button type="button" data-filter=".category-component">Component</button>
+          <button type="button" data-filter=".category-psd">PSD</button>
         </div>
         <div class="products__inner-box">
-          <div class="products__item">
-            <a class="products__item-img" href="#" style="background-image: url(images/content/1.jpg);"></a>
-            <div class="products__item-content">
-              <div class="products__item-name">
-                <a class="products__item-title" href="#">
+          <div class="product__item mix category-component category-new" data-order="1">
+            <a class="product__item-img" href="#" style="background-image: url(images/content/1.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">
                   Responsive Mobile APP
                 </a>
-                <a class="products__item-category" href="#">
+                <a class="product__item-category" href="#">
                   Site Template
                 </a>
               </div>
-              <div class="products__item-price">
+              <div class="product__item-price">
                 $19
               </div>
             </div>
             <div class="product__item-info">
-              <div class="product__item-author">
-                <span style=""></span>
-                Radiustheme
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                <span>Radiustheme</span>
+              </a>
+              <div class="product__item-star">
+                (05)
               </div>
+            </div>
+          </div>
+          <div class="product__item mix category-wordpress category-popular category-new" data-order="2">
+            <a class="product__item-img" href="#" style="background-image: url(images/content/2.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">
+                    The Post Grid Pro
+                </a>
+                <a class="product__item-category" href="#">
+                    WordPress Plugin
+                </a>
+              </div>
+              <div class="product__item-price">
+                  $15
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                <span>PsdBosS</span>
+              </a>
+              <div class="product__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="product__item mix category-wordpress category-new" data-order="3">
+            <a class="product__item-img" href="#" style="background-image: url(images/content/3.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">
+                    Food Menu
+                </a>
+                <a class="product__item-category" href="#">
+                    WordPress Plugin
+                </a>
+              </div>
+              <div class="product__item-price">
+                  $20
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                <span>Manilip</span>
+              </a>
+              <div class="product__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="product__item mix category-psd" data-order="4">
+            <a class="product__item-img" href="#" style="background-image: url(images/content/4.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">
+                    Imac Mockup
+                </a>
+                <a class="product__item-category" href="#">
+                    Psd Template
+                </a>
+              </div>
+              <div class="product__item-price">
+                $12
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                <span>Lolypop</span>
+              </a>
+              <div class="product__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="product__item mix category-joomla category-popular" data-order="5">
+            <a class="product__item-img" href="#" style="background-image: url(images/content/5.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">
+                    Gymedge
+                </a>
+                <a class="product__item-category" href="#">
+                    Joomla Template
+                </a>
+              </div>
+              <div class="product__item-price">
+                  $45
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                <span>Micrsof</span>
+              </a>
+              <div class="product__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="product__item mix category-wordpress category-new" data-order="6">
+            <a class="product__item-img" href="#" style="background-image: url(images/content/6.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">
+                    The Post Grid Pro
+                </a>
+                <a class="product__item-category" href="#">
+                    WordPress Plugin
+                </a>
+              </div>
+              <div class="product__item-price">
+                $19
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                <span>Raklouse</span>
+              </a>
+              <div class="product__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="product__item mix category-component category-popular" data-order="7">
+            <a class="product__item-img" href="#" style="background-image: url(images/content/7.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">
+                    Doll Face
+                </a>
+                <a class="product__item-category" href="#">
+                    Illsatration
+                </a>
+              </div>
+              <div class="product__item-price">
+                $10
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                <span>Mikc Art</span>
+              </a>
+              <div class="product__item-star">
+                (05)
+              </div>
+            </div>
+          </div>
+          <div class="product__item mix category-psd category-popular" data-order="8">
+            <a class="product__item-img" href="#" style="background-image: url(images/content/8.jpg);"></a>
+            <div class="product__item-content">
+              <div class="product__item-name">
+                <a class="product__item-title" href="#">
+                    Designer Mockup
+                </a>
+                <a class="product__item-category" href="#">
+                    PsdTemplate
+                </a>
+              </div>
+              <div class="product__item-price">
+                $10
+              </div>
+            </div>
+            <div class="product__item-info">
+              <a class="product__item-author" href="#">
+                <div class="avatar" style="background-image: url(images/content/user.jpg);"></div>
+                <span>RThemeLol</span>
+              </a>
               <div class="product__item-star">
                 (05)
               </div>
@@ -164,12 +339,17 @@
           </div>
         </div>
       </div>
+      <div class="products__bottom-btn">
+        <button type="button" data-filter=".category-new">All New Items</button>
+        <button type="button" data-filter=".category-popular">Popular Items</button>
+      </div>
     </div>
   </section>
+  <!-- end products -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
