--- a/app/index.html
+++ b/app/index.html
@@ -1154,18 +1154,18 @@
                 PO Box 16122 Collins Street West 
                 Victoria 8007 Australia
             </div>
-            <a href="tel:+61383766284" class="footer__info">+61 3 8376 6284</a>
+            <a href="tel:+61383766284" class="footer__info footer__info-phone">+61 3 8376 6284</a>
           </div>
             <div class="footer__col">
               <div class="footer__col-title">
                   Join Our Community 
             </div>
             <ul class="footer__col-list footer__col-menu">
-              <li class="a" href="#">Home</li>
-              <li class="a" href="#">Forums</li>
-              <li class="a" href="#">Become an Author</li>
-              <li class="a" href="#">Community Meetups</li>
-              <li class="a" href="#">Become an Affiliate</li>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Forums</a></li>
+              <li><a href="#">Become an Author</a></li>
+              <li><a href="#">Community Meetups</a></li>
+              <li><a href="#">Become an Affiliate</a></li>
             </ul>
           </div>
             <div class="footer__col">
@@ -1173,11 +1173,11 @@
                   Need Help?
             </div>
             <ul class="footer__col-list footer__col-menu">
-              <li class="a" href="#">Help Center</li>
-              <li class="a" href="#">Foxtar Market Terms</li>
-              <li class="a" href="#">Author Terms</li>
-              <li class="a" href="#">Foxtar Licenses</li>
-              <li class="a" href="#">Contact Us</li>
+              <li><a href="#">Help Center</a></li>
+              <li><a href="#">Foxtar Market Terms</a></li>
+              <li><a href="#">Author Terms</a></li>
+              <li><a href="#">Foxtar Licenses</a></li>
+              <li><a href="#">Contact Us</a></li>
             </ul>
           </div>
             <div class="footer__col">
@@ -1185,11 +1185,11 @@
                   Follow Us On
             </div>
             <ul class="footer__social-link">
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
-              <li><a href="#"></a></li>
+              <li><a class="link-facebook" href="#"></a></li>
+              <li><a class="link-twitter" href="#"></a></li>
+              <li><a class="link-youtube" href="#"></a></li>
+              <li><a class="link-pinterest" href="#"></a></li>
+              <li><a class="link-likedin" href="#"></a></li>
             </ul>
             <div class="footer__form">
               <div class="footer__form-title">
