--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
   </head>
 
   <body>
+  <div class="wrapper">
+    <div class="content">
     <!-- start header -->
     <header class="header">
       <div class="header__top">
@@ -1137,7 +1139,7 @@
       </div>
     </section>
     <!-- end tutorial -->
-
+  </div>
     <!-- start footer -->
     <footer class="footer">
       <div class="footer__content">
@@ -1213,6 +1215,7 @@
         </div>
       </div>
     </footer>
+  </div>
     <!-- end footer -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
