--- a/app/index.html
+++ b/app/index.html
@@ -48,12 +48,12 @@
           <nav class="menu">
             <ul class="menu__list">
               <li>
-                <a href="#">
+                <a href="index.html">
                   Home
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="about.html">
                   About
                 </a>
               </li>
@@ -83,7 +83,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="new-items.html">
                   Pages
                 </a>
               </li>
