--- a/app/new-items.html
+++ b/app/new-items.html
@@ -44,12 +44,12 @@
                             <nav class="menu">
                                 <ul class="menu__list">
                                     <li>
-                                        <a href="#">
+                                        <a href="index.html">
                                             Home
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="about.html">
                                             About
                                         </a>
                                     </li>
@@ -79,7 +79,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">
+                                        <a href="new-items.html">
                                             Pages
                                         </a>
                                     </li>
@@ -779,7 +779,7 @@
                                 Join Our Community
                             </div>
                             <ul class="footer__col-list footer__col-menu">
-                                <li><a href="#">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li><a href="#">Forums</a></li>
                                 <li><a href="#">Become an Author</a></li>
                                 <li><a href="#">Community Meetups</a></li>
