--- a/app/new-items.html
+++ b/app/new-items.html
@@ -164,7 +164,7 @@
                                         Top 10 Sellers
                                     </div>
                                     <div class="aside__product-item">
-                                    <div class="product__item">
+                                    <div class="product__item aside__product-item">
                                         <a class="product__item-img" href="#"
                                             style="background-image: url(images/content/1.jpg);"></a>
                                         <div class="product__item-content">
@@ -193,7 +193,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="product__item">
+                                    <div class="product__item aside__product-item">
                                         <a class="product__item-img" href="#"
                                             style="background-image: url(images/content/1.jpg);"></a>
                                         <div class="product__item-content">
@@ -222,7 +222,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="product__item">
+                                    <div class="product__item aside__product-item">
                                         <a class="product__item-img" href="#"
                                             style="background-image: url(images/content/1.jpg);"></a>
                                         <div class="product__item-content">
