--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
                 <a class="header__phone" href="tel:+61383766284">+61 3 8376 6284</a>
               </div>
               <div class="header__box">
-                <div class="notification__box">
+                <div class="notification__box header__btn-login--off">
                   <a class="notification header__circle active icon-bell-o" href="#">
                     <span>8</span>
                   </a>
@@ -60,7 +60,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="messege__box">
+                <div class="messege__box header__btn-login--off">
                   <a class="messege header__circle active icon-envelope-o" href="#">
                     <span>5</span>
                   </a>
@@ -124,7 +124,7 @@
                   </div>
                 </div>
                 <div class="user__box">
-                  <a class="user" href="#">
+                  <a class="user header__btn-login--off" href="#">
                     <div class="user__inner">
                       <div class="user__images">
                         <img src="images/content/userlogin.jpg" alt="" />
@@ -154,16 +154,22 @@
                     </ul>
                   </div>
                 </div>
-                <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
-                <a class="header__btn header__btn-logout header__btn-login--on" href="#">Logout</a>
-                <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
+                <a class="header__btn header__btn-login" href="#">Login</a>
+                <a class="header__btn header__btn-logout header__btn-login--off" href="#">Logout</a>
+                <a class="header__btn header__btn-register" href="#">Register</a>
               </div>
+              <div class="header__btn-menu icon-user"></div>
             </div>
           </div>
         </div>
         <div class="header__menu">
           <div class="container">
             <nav class="menu">
+                <div class="menu__btn">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
               <ul class="menu__list">
                 <li>
                   <a href="index.html">
@@ -1031,81 +1037,83 @@
     <!-- start footer -->
     <footer class="footer">
       <div class="footer__content">
-        <div class="container">
-          <div class="footer__inner">
-            <div class="footer__col">
-              <div class="footer__col-title">
-                About Company
+          <div class="container">
+              <div class="footer__inner">
+                  <div class="footer__col footer__col-adress">
+                      <div class="footer__col-title">
+                          About Company
+                      </div>
+                      <div class="footer__col-text">
+                          Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen
+                          disse.Fusce
+                          sit amet urna iat.Praesent vel rutrum purus.
+                      </div>
+                      <div class="footer__info">
+                          PO Box 16122 Collins Street West
+                          Victoria 8007 Australia
+                      </div>
+                      <a href="tel:+61383766284" class="footer__info footer__info-phone">+61 3 8376 6284</a>
+                  </div>
+                  <div class="footer__col">
+                      <div class="footer__col-title">
+                          Join Our Community
+                      </div>
+                      <ul class="footer__col-list footer__col-menu">
+                          <li><a href="index.html">Home</a></li>
+                          <li><a href="#">Forums</a></li>
+                          <li><a href="#">Become an Author</a></li>
+                          <li><a href="#">Community Meetups</a></li>
+                          <li><a href="#">Become an Affiliate</a></li>
+                      </ul>
+                  </div>
+                  <div class="footer__col">
+                      <div class="footer__col-title">
+                          Need Help?
+                      </div>
+                      <ul class="footer__col-list footer__col-menu">
+                          <li><a href="#">Help Center</a></li>
+                          <li><a href="#">Foxtar Market Terms</a></li>
+                          <li><a href="#">Author Terms</a></li>
+                          <li><a href="#">Foxtar Licenses</a></li>
+                          <li><a href="#">Contact Us</a></li>
+                      </ul>
+                  </div>
+                  <div class="footer__col footer__col-social">
+                      <div class="footer__col-title">
+                          Follow Us On
+                      </div>
+                      <ul class="footer__social-link">
+                          <li><a class="link-facebook" href="#"></a></li>
+                          <li><a class="link-twitter" href="#"></a></li>
+                          <li><a class="link-youtube" href="#"></a></li>
+                          <li><a class="link-pinterest" href="#"></a></li>
+                          <li><a class="link-likedin" href="#"></a></li>
+                      </ul>
+                      <div class="footer__form">
+                          <div class="footer__form-title">
+                              Newsletter Sign Up!
+                          </div>
+                          <form>
+                              <input type="text" placeholder="E-mail Address">
+                              <button type="submit"></button>
+                          </form>
+                      </div>
+                  </div>
               </div>
-              <div class="footer__col-text">
-                Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim
-                digniSuspen disse.Fusce sit amet urna iat.Praesent vel rutrum
-                purus.
-              </div>
-              <div class="footer__info">
-                PO Box 16122 Collins Street West Victoria 8007 Australia
-              </div>
-              <a href="tel:+61383766284" class="footer__info footer__info-phone">+61 3 8376 6284</a>
-            </div>
-            <div class="footer__col">
-              <div class="footer__col-title">
-                Join Our Community
-              </div>
-              <ul class="footer__col-list footer__col-menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Forums</a></li>
-                <li><a href="#">Become an Author</a></li>
-                <li><a href="#">Community Meetups</a></li>
-                <li><a href="#">Become an Affiliate</a></li>
-              </ul>
-            </div>
-            <div class="footer__col">
-              <div class="footer__col-title">
-                Need Help?
-              </div>
-              <ul class="footer__col-list footer__col-menu">
-                <li><a href="#">Help Center</a></li>
-                <li><a href="#">Foxtar Market Terms</a></li>
-                <li><a href="#">Author Terms</a></li>
-                <li><a href="#">Foxtar Licenses</a></li>
-                <li><a href="#">Contact Us</a></li>
-              </ul>
-            </div>
-            <div class="footer__col">
-              <div class="footer__col-title">
-                Follow Us On
-              </div>
-              <ul class="footer__social-link">
-                <li><a class="link-facebook" href="#"></a></li>
-                <li><a class="link-twitter" href="#"></a></li>
-                <li><a class="link-youtube" href="#"></a></li>
-                <li><a class="link-pinterest" href="#"></a></li>
-                <li><a class="link-likedin" href="#"></a></li>
-              </ul>
-              <div class="footer__form">
-                <div class="footer__form-title">
-                  Newsletter Sign Up!
-                </div>
-                <form>
-                  <input type="text" placeholder="E-mail Address" />
-                  <button type="submit"></button>
-                </form>
-              </div>
-            </div>
           </div>
-        </div>
       </div>
       <div class="footer__copy">
-        <div class="container">
-          <div class="footer__copy-text">
-            © 2017 Foxtar market place. Trademarks and brands are the property
-            of their respective owners.
+          <div class="container">
+              <div class="footer__copy-text">
+                  © 2017 Foxtar market place. Trademarks and brands are the property
+                  of their respective owners.
+              </div>
           </div>
-        </div>
       </div>
-    </footer>
-  </div>
+  </footer>
   <!-- end footer -->
+  </div>
+ 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
