--- a/app/new-items.html
+++ b/app/new-items.html
@@ -254,7 +254,7 @@
                         <div class="breadcrumbs__inner">
                             <ul class="breadcrumbs__list">
                                 <li><a href="index.html">Home</a></li>
-                                <li><span></span>Product Page</span></li>
+                                <li></span>Product Page</span></li>
                             </ul>
                         </div>
                     </div>
