added profile page

--- a/app/personal-page.html
+++ b/app/personal-page.html
@@ -320,6 +320,9 @@
           </div>
         </section>
         <!--end search -->
+
+        <!-- start breadcrumbs -->
+        
         <div class="breadcrumbs">
           <div class="container">
             <div class="breadcrumbs__inner">
@@ -331,7 +334,9 @@
           </div>
         </div>
 
-        <div class="personal-info">
+        <!-- end breadcrumbs -->
+
+        <section class="personal-info">
           <div class="container">
             <!-- start tabs -->
             <div class="personal-info__tabs settings__tabs">
@@ -594,7 +599,12 @@
             </div>
             <!-- end tabs -->
           </div>
-        </div>
+        </section>
+
+
+
+
+        
       </div>
       <!-- start footer -->
       <footer class="footer">
