added adaptive for site firs part

--- a/app/profile.html
+++ b/app/profile.html
@@ -370,31 +370,32 @@
                       </div>
                     </div>
                     <div class="personal-box__item">
-                        <div class="personal-box__item-head">
-                          <div class="personal-box__item-name">
-                              WordPress
-                          </div>
-                          <div class="personal-box__item-number">90%</div>
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          WordPress
                         </div>
-                        <div class="personal-box__item-line">
-                          <span style="max-width: 90%"></span>
-                        </div>
+                        <div class="personal-box__item-number">90%</div>
                       </div>
-                      <div class="personal-box__item">
-                          <div class="personal-box__item-head">
-                            <div class="personal-box__item-name">
-                                Joomla
-                            </div>
-                            <div class="personal-box__item-number">70%</div>
-                          </div>
-                          <div class="personal-box__item-line">
-                            <span style="max-width: 70%"></span>
-                          </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 90%"></span>
+                      </div>
+                    </div>
+                    <div class="personal-box__item">
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          Joomla
                         </div>
+                        <div class="personal-box__item-number">70%</div>
+                      </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 70%"></span>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
-              <div class="tab-item" id="2"><div class="personal-box">
+              <div class="tab-item" id="2">
+                <div class="personal-box">
                   <div class="personal-box__title">Products</div>
                   <div class="personal-box__text">
                     <p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -416,30 +417,32 @@
                       </div>
                     </div>
                     <div class="personal-box__item">
-                        <div class="personal-box__item-head">
-                          <div class="personal-box__item-name">
-                              WordPress
-                          </div>
-                          <div class="personal-box__item-number">90%</div>
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          WordPress
                         </div>
-                        <div class="personal-box__item-line">
-                          <span style="max-width: 90%"></span>
-                        </div>
+                        <div class="personal-box__item-number">90%</div>
                       </div>
-                      <div class="personal-box__item">
-                          <div class="personal-box__item-head">
-                            <div class="personal-box__item-name">
-                                Joomla
-                            </div>
-                            <div class="personal-box__item-number">70%</div>
-                          </div>
-                          <div class="personal-box__item-line">
-                            <span style="max-width: 70%"></span>
-                          </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 90%"></span>
+                      </div>
+                    </div>
+                    <div class="personal-box__item">
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          Joomla
                         </div>
+                        <div class="personal-box__item-number">70%</div>
+                      </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 70%"></span>
+                      </div>
+                    </div>
                   </div>
-                </div></div>
-              <div class="tab-item" id="3"><div class="personal-box">
+                </div>
+              </div>
+              <div class="tab-item" id="3">
+                <div class="personal-box">
                   <div class="personal-box__title">Massege Box</div>
                   <div class="personal-box__text">
                     <p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -461,30 +464,32 @@
                       </div>
                     </div>
                     <div class="personal-box__item">
-                        <div class="personal-box__item-head">
-                          <div class="personal-box__item-name">
-                              WordPress
-                          </div>
-                          <div class="personal-box__item-number">90%</div>
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          WordPress
                         </div>
-                        <div class="personal-box__item-line">
-                          <span style="max-width: 90%"></span>
-                        </div>
+                        <div class="personal-box__item-number">90%</div>
                       </div>
-                      <div class="personal-box__item">
-                          <div class="personal-box__item-head">
-                            <div class="personal-box__item-name">
-                                Joomla
-                            </div>
-                            <div class="personal-box__item-number">70%</div>
-                          </div>
-                          <div class="personal-box__item-line">
-                            <span style="max-width: 70%"></span>
-                          </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 90%"></span>
+                      </div>
+                    </div>
+                    <div class="personal-box__item">
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          Joomla
                         </div>
+                        <div class="personal-box__item-number">70%</div>
+                      </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 70%"></span>
+                      </div>
+                    </div>
                   </div>
-                </div></div>
-              <div class="tab-item" id="4"><div class="personal-box">
+                </div>
+              </div>
+              <div class="tab-item" id="4">
+                <div class="personal-box">
                   <div class="personal-box__title">Customer Reviews</div>
                   <div class="personal-box__text">
                     <p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -506,30 +511,32 @@
                       </div>
                     </div>
                     <div class="personal-box__item">
-                        <div class="personal-box__item-head">
-                          <div class="personal-box__item-name">
-                              WordPress
-                          </div>
-                          <div class="personal-box__item-number">90%</div>
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          WordPress
                         </div>
-                        <div class="personal-box__item-line">
-                          <span style="max-width: 90%"></span>
-                        </div>
+                        <div class="personal-box__item-number">90%</div>
                       </div>
-                      <div class="personal-box__item">
-                          <div class="personal-box__item-head">
-                            <div class="personal-box__item-name">
-                                Joomla
-                            </div>
-                            <div class="personal-box__item-number">70%</div>
-                          </div>
-                          <div class="personal-box__item-line">
-                            <span style="max-width: 70%"></span>
-                          </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 90%"></span>
+                      </div>
+                    </div>
+                    <div class="personal-box__item">
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          Joomla
                         </div>
+                        <div class="personal-box__item-number">70%</div>
+                      </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 70%"></span>
+                      </div>
+                    </div>
                   </div>
-                </div></div>
-              <div class="tab-item" id="5"><div class="personal-box">
+                </div>
+              </div>
+              <div class="tab-item" id="5">
+                <div class="personal-box">
                   <div class="personal-box__title">Followers</div>
                   <div class="personal-box__text">
                     <p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -551,29 +558,30 @@
                       </div>
                     </div>
                     <div class="personal-box__item">
-                        <div class="personal-box__item-head">
-                          <div class="personal-box__item-name">
-                              WordPress
-                          </div>
-                          <div class="personal-box__item-number">90%</div>
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          WordPress
                         </div>
-                        <div class="personal-box__item-line">
-                          <span style="max-width: 90%"></span>
-                        </div>
+                        <div class="personal-box__item-number">90%</div>
                       </div>
-                      <div class="personal-box__item">
-                          <div class="personal-box__item-head">
-                            <div class="personal-box__item-name">
-                                Joomla
-                            </div>
-                            <div class="personal-box__item-number">70%</div>
-                          </div>
-                          <div class="personal-box__item-line">
-                            <span style="max-width: 70%"></span>
-                          </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 90%"></span>
+                      </div>
+                    </div>
+                    <div class="personal-box__item">
+                      <div class="personal-box__item-head">
+                        <div class="personal-box__item-name">
+                          Joomla
                         </div>
+                        <div class="personal-box__item-number">70%</div>
+                      </div>
+                      <div class="personal-box__item-line">
+                        <span style="max-width: 70%"></span>
+                      </div>
+                    </div>
                   </div>
-                </div></div>
+                </div>
+              </div>
             </div>
           </div>
           <!-- end tabs -->
