--- a/app/contacts.html
+++ b/app/contacts.html
@@ -198,7 +198,7 @@
                     <div class="user__menu">
                       <ul>
                         <li>
-                          <a class="angle-right" href="#">Profile Page</a>
+                          <a class="angle-right" href="profile.html">Profile Page</a>
                         </li>
                         <li><a class="angle-right" href="#">Portfolio</a></li>
                         <li>
@@ -208,7 +208,7 @@
                         <li><a class="angle-right" href="#">Wishlist</a></li>
                         <li><a class="angle-right" href="#">Upload Item</a></li>
                         <li><a class="angle-right" href="#">Statement</a></li>
-                        <li><a class="angle-right" href="#">Withdraws</a></li>
+                        <li><a class="angle-right" href="withdrawals.html">Withdraws</a></li>
                       </ul>
                     </div>
                   </div>
@@ -426,7 +426,7 @@
                   <li><a href="#">Foxtar Market Terms</a></li>
                   <li><a href="#">Author Terms</a></li>
                   <li><a href="#">Foxtar Licenses</a></li>
-                  <li><a href="#">Contact Us</a></li>
+                  <li><a href="contacts.html">Contact Us</a></li>
                 </ul>
               </div>
               <div class="footer__col footer__col-social">
