--- a/app/index.html
+++ b/app/index.html
@@ -152,7 +152,7 @@
                         </li>
                         <a><a class="angle-right" href="#">Downloads</a></a>
                         <li><a class="angle-right" href="#">Wishlist</a></li>
-                        <li><a class="angle-right" href="#">Upload Item</a></li>
+                        <li><a class="angle-right" href="upload.html">Upload Item</a></li>
                         <li><a class="angle-right" href="#">Statement</a></li>
                         <li><a class="angle-right" href="withdrawals.html">Withdraws</a></li>
                       </ul>
