--- a/app/page.html
+++ b/app/page.html
@@ -148,7 +148,7 @@
                               </li>
                               <li><a class="angle-right" href="#">Downloads</a></li>
                               <li><a class="angle-right" href="#">Wishlist</a></li>
-                              <li><a class="angle-right" href="#">Upload Item</a></li>
+                              <li><a class="angle-right" href="upload.html">Upload Item</a></li>
                               <li><a class="angle-right" href="#">Statement</a></li>
                               <li><a class="angle-right" href="withdrawals.html">Withdraws</a></li>
                             </ul>
